CAMEL-17839: camel-health - Add CHECK.KIND when invoking a health-check so we know if its a readiness or liveness check being executed. This is needed for checks that support boths but need to react differently.